check the about us page

--- a/about.html
+++ b/about.html
@@ -62,14 +62,14 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 				<div class="ast_contact_details">
 					<ul>
 						<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:09096267138">+91-9096267138</a></li>
-						<li><a href="https://wa.me/9096267138"><i class="fa fa-whatsapp"></i>9096267138</a></li>		
+						<li><a href="https://wa.me/9096267138"><i class="fa fa-whatsapp"></i>+91-9096267138</a></li>		
 					</ul>
 				</div>
 				<div class="ast_autho_wrapper">
-					<!-- <ul>
-						<li><a href="/cdn-cgi/l/email-protection#ea878b848d8f99828d9f989f8083c48781aa8d878b8386c4898587"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="7b161a151c1e08131c0e090e11125516103b1c161a121755181416">[email&#160;protected]</span></a></li>								
+					<ul>
+						<li><a href="/cdn-cgi/l/email-protection#6d000c030a081e050a181f1807044300062d0a000c0401430e0200"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="214c404f46445249465453544b480f4c4a61464c40484d0f424e4c">shreekrushnaguruji@gmail.com</span></a></li>								
 					
-					</ul> -->
+					</ul>
 					
 				</div>
 			</div>
