--- a/astrology_for_matchmaking.html
+++ b/astrology_for_matchmaking.html
@@ -69,7 +69,7 @@ gtag('config', 'AW-11069632900');
 				</div>
 				<div class="ast_autho_wrapper">
 					<ul>
-						<li><a href="/cdn-cgi/l/email-protection#6d000c030a081e050a181f1807044300062d0a000c0401430e0200"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="214c404f46445249465453544b480f4c4a61464c40484d0f424e4c">[email&#160;protected]</span></a></li>								
+						<li><a href="/cdn-cgi/l/email-protection#6d000c030a081e050a181f1807044300062d0a000c0401430e0200"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="214c404f46445249465453544b480f4c4a61464c40484d0f424e4c">shreekrushnaguruji@gmail.com</span></a></li>								
 					
 					</ul>
 					
