--- a/vastu_for_career.html
+++ b/vastu_for_career.html
@@ -248,88 +248,35 @@ gtag('config', 'AW-11069632900');
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<div align="center">
 					<h1 style="color:red;">Vastu Services</h1>
-					<p align="center">Vastu expert Mangesh Kulkarni helps you analyze structure of home or office or factory. He will give a direction-specific study associated with the foundation of a house, building, plot or other constructions. Vastu Shastra affects one's life's quality.</p>
+					<p align="center">Vastu expert Shree Krishna helps you analyze structure of home or office or factory. He will give a direction-specific study associated with the foundation of a house, building, plot or other constructions. Vastu Shastra affects one's life's quality.</p>
 				</div><br>	
 				<div class="ast_vastu_box_wrapper">
 					<div class="row">
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
 								<a href="vastu_for_house.html">
-									<img src="images/content/v1.jpg" alt="Vastu For House" title="Vastu For House">
+									<img src="images/vastu for house.jpeg" alt="Vastu For House" title="Vastu For House">
 									<h4>Vastu For House</h4>
 								</a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
-								<a href="vastu_for_flat.html">
-									<img src="images/content/v2.jpg" alt="Vastu For Flats" title="Vastu For Flats">
+								<a href="vastu_for_flats.html">
+									<img src="images/vastu for flats.jpeg" alt="Vastu For Flats" title="Vastu For Flats">
 									<h4>Vastu For Flats</h4>
 								</a>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
-								<a href="vastu_for_business.html">
+								<a href="images/for business.avif">
 									<img src="images/content/v3.jpg" alt="Vastu For Business" title="Vastu For Business">
 									<h4>Vastu For Business</h4>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_for_rentedflats.html">
-									<img src="images/content/v4.jpg" alt="Vastu For Rented Flat/Home" title="Vastu For Rented Flat/Home">
-									<h4>Vastu For Rented Flat/Home</h4>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_for_buying_plts.html">
-									<img src="images/content/v5.jpg" alt="Vastu For Buying Plots" title="Vastu For Buying Plots">
-									<h4>Vastu For Buying Plots</h4>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_for_health.html">
-									<img src="images/content/v6.jpg" alt="Vastu For Health" title="Vastu For Health">
-									<h4>Vastu For Health</h4>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_for_partially_completed-structure.html">
-									<img src="images/content/v7.jpg" alt="Vastu For Partially completed construction" title="Vastu For Partially completed construction">
-									<h4>Vastu For Partially completed construction</h4>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_for_career.html">
-									<img src="images/content/v8.jpg" alt="Vastu For Career" title="Vastu For Career">
-									<h4>Vastu For Career</h4>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="ast_vastu_box">
-								<a href="vastu_correction.html">
-									<img src="images/content/v9.jpg" alt="Vastu Correction Without Demolition" title="Vastu Correction Without Demolition">
-									<h4>Vastu Correction Without Demolition</h4>
-								</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+
 <!--Vastu End-->
 
 <!-- Download wrapper start-->
@@ -351,12 +298,12 @@ gtag('config', 'AW-11069632900');
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
 				<div class="ast_footer_info">
-					<img src="images/header/logo.png" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune">
-					<p>Shree Jyotish and Vastu Research Center is based on traditional and Krishmurti horoscope reading methods, which result in accurate forecasting. Unmistakable Interpretation of Vidhilikhit facts done by Guruji "Correct rituals are performed by Guruji." Such testimonials from hundreds of people are with us. Shree Krishna Guruji solved complex problems with effective spiritual remedies.</p>
+					<img src="images/white bg.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center">
+					<p>Shree Krushna Guruji is a revered spiritual leader known for his wisdom, guidance, and deep devotion to spreading knowledge and peace. His teachings inspire countless individuals to lead a life of virtue, humility, and compassion.</p>
 
 					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919096267138" style="color:#FFFFFF;">+91-9096267138</a></p>
-					<!-- <p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+91" style="color:#FFFFFF;">+91-</a></p>
-					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+91" style="color:#FFFFFF;">+91-</a></p>				 -->
+					<!-- <p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919022096393" style="color:#FFFFFF;"></a></p>
+					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+918149308042" style="color:#FFFFFF;"></a></p>				 -->
 
 					<ul>
 						<li><a href="https://www.facebook.com/vastumargdarshan" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>					
