--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 				<div class="ast_contact_details">
 					<ul>
 						<li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:09096267138">+91-9096267138</a></li>
-						<li><a href="https://wa.me/9096267138"><i class="fa fa-whatsapp"></i>9096267138</a></li>	
+						<li><a href="https://wa.me/9096267138"><i class="fa fa-whatsapp"></i>+91-9096267138</a></li>	
 					</ul>
 				</div>
 				<div class="ast_autho_wrapper">
-					<!-- <ul>
-						<li><a href="/cdn-cgi/l/email-protection#2548444b4240564d425057504f4c0b484e654248444c490b464a48"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="771a16191012041f100205021d1e591a1c37101a161e1b5914181a">[email&#160;protected]</span></a></li>								
-					</ul> -->
+					<ul>
+						<li><a href="/cdn-cgi/l/email-protection#2548444b4240564d425057504f4c0b484e654248444c490b464a48"><i class="fa fa-envelope-o" aria-hidden="true"></i> <span class="__cf_email__" data-cfemail="771a16191012041f100205021d1e591a1c37101a161e1b5914181a">shreekrushnaguruji@gmail.com</span></a></li>								
+					</ul>
 					
 				</div>
 			</div>
@@ -567,12 +567,12 @@
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
 				<div class="ast_footer_info">
-					<img src="images/header/logo.png" alt="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune" title="Shree Krushna Guruji - Expert Kundali Astrologer & Pandit in Pune">
-					<p>Shree Krushna Guruji - Expert Kundali Astrologer & Pandit is based on traditional and Krishmurti horoscope reading methods, which result in accurate forecasting. Unmistakable Interpretation of Vidhilikhit facts done by Guruji "Correct rituals are performed by Guruji." Such testimonials from hundreds of people are with us. shree krushna guruji solved complex problems with effective spiritual remedies.</p>
+					<img src="images/white bg.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center">
+					<p>Shree Krushna Guruji is a revered spiritual leader known for his wisdom, guidance, and deep devotion to spreading knowledge and peace. His teachings inspire countless individuals to lead a life of virtue, humility, and compassion.</p>
 
 					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919096267138" style="color:#FFFFFF;">+91-9096267138</a></p>
-					<!-- <p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919022096393" style="color:#FFFFFF;">+91-9022096393</a></p>
-					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+918149308042" style="color:#FFFFFF;">+91-8149308042</a></p>		 -->
+					<!-- <p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+919022096393" style="color:#FFFFFF;"></a></p>
+					<p class="ast_blog_info_details" style="color:yellow;"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:+918149308042" style="color:#FFFFFF;"></a></p>				 -->
 
 					<ul>
 						<li><a href="https://www.facebook.com/vastumargdarshan" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>					
@@ -583,7 +583,7 @@
 					</ul>
 				</div>
 			</div>
-			
+						
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 				<div class="widget text-widget">
 					<h4 class="widget-title">Vastu Solutions</h4>
