--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 													<li class="aa"><a href="vastu_for_house.html" style="color: black;">Vastu For House</a></li>
 													<!-- <li><a href="vastu_for_flats.html" style="color: black;">Vastu For Flats</a></li> -->
 													<li><a href="vastu_for_business.html" style="color: black;">Vastu For Business</a></li>
-													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Rented Flat/Home</a></li> 	
+													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Flat</a></li> 	
 													<!-- <li><a href="vastu_for_buying_plts.html" style="color: black;">Vastu For Buying Plots</a></li> -->
 													<!-- <li><a href="vastu_for_partially_completed-structure.html" style="color: black;">Vastu For Partially completed construction </a></li> -->
 													<!-- <li><a href="vastu_for_career.html" style="color: black;">Vastu For Career</a></li> -->
@@ -391,7 +391,7 @@ vastu shastra expert near me, vastu person near me, astro vastu consultant, shre
 					<h3 class="ast_blog_info_heading" style="color:red; font-weight:bold;"><strong>Residential Jyotish and Vastu Consultants in Pune </strong></h3><br><br><br>
 					
 					<div align="center">
-						<img sr="images/Commercial_Vastu.jpeg" alt="Residential Vastu Consultants in Pune">
+						<img src="images/Commercial_Vastu.jpeg" alt="Residential Vastu Consultants in Pune">
 					</div><br>	
 
 					<p align="justify">Our homes are more than just places to live; they are sanctuaries where we nurture our dreams and relationships. By aligning your home with Jyotish and Vastu principles, you can invite harmony, prosperity, and positive cosmic energies into your life. Our expert consultations ensure your home radiates positivity while mitigating challenges posed by astrological and architectural imbalances. Seeking guidance for your dream home? Contact us today!</p><br>
