--- a/astrology_for_career.html
+++ b/astrology_for_career.html
@@ -126,7 +126,7 @@ gtag('config', 'AW-11069632900');
 													<li class="aa"><a href="vastu_for_house.html" style="color: black;">Vastu For House</a></li>
 													<!-- <li><a href="vastu_for_flats.html" style="color: black;">Vastu For Flats</a></li> -->
 													<li><a href="vastu_for_business.html" style="color: black;">Vastu For Business</a></li>
-													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Rented Flat/Home</a></li> 	
+													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Flat</a></li> 	
 													<!-- <li><a href="vastu_for_buying_plts.html" style="color: black;">Vastu For Buying Plots</a></li> -->
 													<!-- <li><a href="vastu_for_partially_completed-structure.html" style="color: black;">Vastu For Partially completed construction </a></li> -->
 													<!-- <li><a href="vastu_for_career.html" style="color: black;">Vastu For Career</a></li> -->
@@ -186,7 +186,7 @@ gtag('config', 'AW-11069632900');
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<div class="ast_blog_box">
 					<div class="ast_blog_img" align="center">						
-						<img src="images/image.png" alt="Career Astrology" title="Career Astrology">
+						<img src="images/ast-buisness-1.jpg" alt="Career Astrology" title="Career Astrology">
 					</div>
 					<div class="ast_blog_info">
 						
@@ -234,7 +234,7 @@ gtag('config', 'AW-11069632900');
 						<h3 style="color:red;">Careers by zodiac signs</h3><br>
 
 						<div align="center">
-							<img src="images/bg3.webp" alt="Careers by zodiac signs">
+							<img src="images/ast-buissness.jpg" alt="Careers by zodiac signs">
 						</div><br>
 						
 							<ul style="color:black;">								
