--- a/vastu_for_rentedflats.html
+++ b/vastu_for_rentedflats.html
@@ -125,7 +125,7 @@ gtag('config', 'AW-11069632900');
 													<li class="aa"><a href="vastu_for_house.html" style="color: black;">Vastu For House</a></li>
 													<!-- <li><a href="vastu_for_flats.html" style="color: black;">Vastu For Flats</a></li> -->
 													<li><a href="vastu_for_business.html" style="color: black;">Vastu For Business</a></li>
-													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Rented Flat/Home</a></li> 	
+													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Flat</a></li> 	
 													<!-- <li><a href="vastu_for_buying_plts.html" style="color: black;">Vastu For Buying Plots</a></li> -->
 													<!-- <li><a href="vastu_for_partially_completed-structure.html" style="color: black;">Vastu For Partially completed construction </a></li> -->
 													<!-- <li><a href="vastu_for_career.html" style="color: black;">Vastu For Career</a></li> -->
@@ -252,7 +252,7 @@ gtag('config', 'AW-11069632900');
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
 								<a href="vastu_for_house.html">
-									<img src="images/content/v1.jpg" alt="Vastu For House" title="Vastu For House">
+									<img src="images/vastu for house.jpeg" alt="Vastu For House" title="Vastu For House">
 									<h4>Vastu For House</h4>
 								</a>
 							</div>
@@ -260,7 +260,7 @@ gtag('config', 'AW-11069632900');
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
 								<a href="vastu_for_flats.html">
-									<img src="images/content/v2.jpg" alt="Vastu For Flats" title="Vastu For Flats">
+									<img src="images/Vastu-For-Flat.png" alt="Vastu For Flats" title="Vastu For Flats">
 									<h4>Vastu For Flats</h4>
 								</a>
 							</div>
@@ -268,12 +268,12 @@ gtag('config', 'AW-11069632900');
 						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
 								<a href="vastu_for_business.html">
-									<img src="images/content/v3.jpg" alt="Vastu For Business" title="Vastu For Business">
+									<img src="images/vastu-for-buisnesss.jpeg" alt="Vastu For Business" title="Vastu For Business">
 									<h4>Vastu For Business</h4>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+						<!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 							<div class="ast_vastu_box">
 								<a href="vastu_for_rentedflats.html">
 									<img src="images/content/v4.jpg" alt="Vastu For Rented Flat/Home" title="Vastu For Rented Flat/Home">
@@ -320,7 +320,7 @@ gtag('config', 'AW-11069632900');
 									<h4>Vastu Correction Without Demolition</h4>
 								</a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
