--- a/horoscopes_reading.html
+++ b/horoscopes_reading.html
@@ -82,7 +82,7 @@ gtag('config', 'AW-11069632900');
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<div class="ast_logo">
-					<a href="index.html"><img src="" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center"></a>
+					<a href="index.html"><img src="images/white bg.png" alt="Shree Jyotish And Vastu Research Center" title="Shree Jyotish And Vastu Research Center"></a>
 					<button class="ast_menu_btn"><i class="fa fa-bars" aria-hidden="true"></i></button>
 				</div>
 			</div>
@@ -129,7 +129,7 @@ gtag('config', 'AW-11069632900');
 													<li class="aa"><a href="vastu_for_house.html" style="color: black;">Vastu For House</a></li>
 													<!-- <li><a href="vastu_for_flats.html" style="color: black;">Vastu For Flats</a></li> -->
 													<li><a href="vastu_for_business.html" style="color: black;">Vastu For Business</a></li>
-													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Rented Flat/Home</a></li> 	
+													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Flat</a></li> 	
 													<!-- <li><a href="vastu_for_buying_plts.html" style="color: black;">Vastu For Buying Plots</a></li> -->
 													<!-- <li><a href="vastu_for_partially_completed-structure.html" style="color: black;">Vastu For Partially completed construction </a></li> -->
 													<!-- <li><a href="vastu_for_career.html" style="color: black;">Vastu For Career</a></li> -->
