--- a/vastu_defects.html
+++ b/vastu_defects.html
@@ -130,7 +130,7 @@ gtag('config', 'AW-11069632900');
 													<li class="aa"><a href="vastu_for_house.html" style="color: black;">Vastu For House</a></li>
 													<!-- <li><a href="vastu_for_flats.html" style="color: black;">Vastu For Flats</a></li> -->
 													<li><a href="vastu_for_business.html" style="color: black;">Vastu For Business</a></li>
-													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Rented Flat/Home</a></li> 	
+													<li><a href="vastu_for_rentedflats.html" style="color: black;">Vastu For Flat</a></li> 	
 													<!-- <li><a href="vastu_for_buying_plts.html" style="color: black;">Vastu For Buying Plots</a></li> -->
 													<!-- <li><a href="vastu_for_partially_completed-structure.html" style="color: black;">Vastu For Partially completed construction </a></li> -->
 													<!-- <li><a href="vastu_for_career.html" style="color: black;">Vastu For Career</a></li> -->
