--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@ gtag('config', 'AW-11069632900');
 <link rel="stylesheet" type="text/css" href="styleee/style.css">
 <link rel="stylesheet" type="text/css" href="styleee/example.css">
 <link rel="stylesheet" type="text/css" href="styleee/form.css">
+<!-- <link rel="stylesheet" type="text/css" href="styleee/form.css"> -->
 
 <!-- Favicon Link -->
 <link rel="shortcut icon" type="image/png" href="images/header/favicon.png" />
@@ -156,6 +157,7 @@ gtag('config', 'AW-11069632900');
 	</div>
 </div>
 <!-- Header End -->  
+
 <!--Breadcrumb start-->
 <div class="ast_pagetitle">
 <div class="ast_img_overlay"></div>
@@ -178,6 +180,8 @@ gtag('config', 'AW-11069632900');
 </div>
 <!--Breadcrumb end-->
 <!--Content Us Start-->
+
+
 <div class="ast_contact_wrapper ast_toppadder70 ast_bottompadder50">
 	<div class="container">
 		<div class="row">
@@ -222,67 +226,56 @@ gtag('config', 'AW-11069632900');
 	
 	</div>
 </div>
-
-<!--Content Us End-->
-
-				
- <!-- <div class="col-lg-12 col-md-12 col-sm-12">
-		<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript" src="https://form.jotform.com/jsform/241870796182466"></script> 
- </div>		 -->
-
-
-<!-- <div class="ast_mapnfor">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-1 col-xs-offset-0">
-				<div class="ast_heading">
-					<h1>find & message <span>here</span></h1>
-					<p class="ast_blog_info_details" style="color:#000000;"> Shree Jyotish And Vastu Research Center is one of the leading Vastu Consultant in Pune. Consult your problem by mail with us and Get Proper Solution !</p>
-				</div>
-			</div>
-		</div>
+<div class="containerpro"
+	<div class="container1">
+	<div class="text">
+	   Contact us Form
 	</div>
-	<div class="ast_contact_map">
-		<div class="col-lg-6 col-md-8 col-sm-8 col-xs-12 col-lg-offset-3 col-md-offset-2 col-sm-offset-2 col-xs-offset-0">
-			<div class="ast_contact_form">
-				<div class="row contact-wrap">
-				<div class="status alert alert-success" style="display: none"></div>
+	<form action="#">
+	   <div class="form-row">
+		  <div class="input-data">
+			 <input type="text" required>
+			 <div class="underline"></div>
+			 <label for="">First Name</label>
+		  </div>
+		  <div class="input-data">
+			 <input type="text" required>
+			 <div class="underline"></div>
+			 <label for="">Last Name</label>
+		  </div>
+	   </div>
+	   <div class="form-row">
+		  <div class="input-data">
+			 <input type="text" required>
+			 <div class="underline"></div>
+			 <label for="">Email Address</label>
+		  </div>
+		  <div class="input-data">
+			 <input type="text" required>
+			 <div class="underline"></div>
+			 <label for="">Website Name</label>
+		  </div>
+	   </div>
+	   <div class="form-row">
+	   <div class="input-data textarea">
+		  <textarea rows="8" cols="80" required></textarea>
+		  <br />
+		  <div class="underline"></div>
+		  <label for="">Write your message</label>
+		  <br />
+		  <div class="form-row submit-btn">
+			 <div class="input-data">
+				<div class="inner"></div>
+				<input type="submit" value="submit">
+			 </div>
+		  </div>
+	</form>
+	</div>
+</div>
 
-				 <form class="contact-form" method="post" action="sendmail.php">
-					<div class="col-sm-5 col-sm-offset-1">
-						<div class="form-group">
-							<label>Name</label>
-							<input type="text" name="name" placeholder="Your Name" class="form-control" required="required">
-						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="email" name="email" placeholder="Your Email ID" class="form-control" required="required">
-						</div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input type="number" name="phone_number" placeholder="Contact Number" class="form-control" required="required">
-						</div>
-					</div>
-					<div class="col-sm-5">
-						<div class="form-group">
-							<label>Subject</label>
-							<input type="text" name="msg_subject" placeholder="Subject" class="form-control" required="required">
-						</div>
-						<div class="form-group">
-							<label>Message</label>
-							<textarea name="message" placeholder="Your Message" required="required" class="form-control" rows="5"></textarea>
-						</div>
-						<div class="form-group">
-							<button type="submit" name="submit" class="btn btn-danger btn-lg" required="required">Submit Message</button>
-						</div>
-					</div>
-				</form> 
-			</div>  
-        
-        </div>
-			</div>
-		</div> -->
-		<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3784.515061029935!2d73.8091266153077!3d18.460314575831454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2956c6437d7bf%3A0xffa1e50550969099!2sVastu%20Consultation%20Pune!5e0!3m2!1sen!2sin!4v1571135086559!5m2!1sen!2sin" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe> -->
+
+
+
 
 	<div class="ast_download_wrapper ast_toppadder70 ast_bottompadder70">
 	
